# maze

./: .gitignore  README.md  _debug_check.py  _debug_train.py  index.css  index.html  pyproject.toml  requirements.txt  script.js  training-worker.js
docs/: full-known-map-playback-architecture.md
src/maze_rl/: __init__.py  cli.py  config.py
src/maze_rl/envs/: __init__.py  debug_layouts.py  entities.py  maze_env.py  maze_generator.py  observation.py  rewards.py
src/maze_rl/policies/: __init__.py  action_helpers.py  agent_interface.py  backends.py  model_factory.py
src/maze_rl/render/: __init__.py  control_app.py  replay_viewer.py  view_state.py
src/maze_rl/training/: __init__.py  checkpointing.py  evaluate.py  metrics.py  showcase.py  train.py
tests/: pylint_c0301_c0304_baseline.txt  test_agent_backend.py  test_app_controller.py  test_checkpoint_flow.py  test_cli.py  test_config.py  test_debug_trace_and_capture.py  test_env_basic.py  test_eval_multiseed.py  test_frozen_eval.py  test_lint.py  test_render_view_state.py  test_seed_reproducibility.py  test_showcase.py  test_training_progress.py  test_training_resume.py
