[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maze-rl-lab"
version = "0.1.0"
description = "Python reinforcement-learning maze lab with deterministic checkpoints and frozen evaluation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "gymnasium>=0.29,<1.1",
  "stable-baselines3>=2.3,<3.0",
  "sb3-contrib>=2.3,<3.0",
  "pygame>=2.5,<3.0",
  "numpy>=1.26,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]